# unitrack-backend

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  unitrack software specs n arch.html
alembic/: env.py
alembic/versions/: 24a04e22dd61_fleet_gps_points.py  8e1582729149_identity_core.py  b7f3c1a9d2e4_drop_gps_points_es_only.py  c4d8e1f60a35_trips_routes_stops.py  d5b2f7c94e18_seat_reports_alerts.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  admin.py  auth.py  fleet.py  helper.py  tracking.py
app/core/: authz.py  config.py  elasticsearch.py  redis.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  fleet.py  ops.py  user.py
app/schemas/: admin.py  auth.py  fleet.py  gps.py  ops.py  trip.py
app/services/: __init__.py  ops.py  trip.py
app/worker/: __main__.py  gps_es_indexer.py
deploy/: nginx.conf  nginx.prod.conf
docs/: auth.md  dev-windows.md  spec.md
scripts/: dev_seed_fleet.py  dev_seed_routes.py  seed_admin.py  seed_dev.py  smoke_test.py
tests/: test_auth_coverage.py  test_cache_contracts.py
