[project]
name = "unitrack-backend"
version = "0.1.0"
description = "UniTrack API + workers — FastAPI hub for university bus ticketing & live tracking"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "redis>=5.2",
    "elasticsearch[async]>=8.15,<9",
    # zoneinfo reads the *system* tz database, which Windows does not have and
    # python:*-slim images do not ship. Without this, resolving
    # settings.service_timezone raises ZoneInfoNotFoundError and every trip
    # start fails. Explicit dependency rather than a base-image assumption.
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic autogenerates these; don't style-gate generated migrations.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends()/Query() in argument defaults is the idiomatic FastAPI pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
